2014-02-21  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_WITH_PAX): Leave PAX_COMMAND with the empty
	string rather than "not specified" to avoid build
	failures.
	* pax-mark-vm.in: Update PAX_COMMAND check.

2014-02-19  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* patches/boot/test_gamma.patch,
	* patches/pax-mark-rmic-java.patch,
	* patches/test_gamma.patch:
	Removed.
	* INSTALL:
	Document ARM32 JIT and --enable-arm32-jit option.
	* Makefile.am:
	(CORBA_CHANGESET): Update to icedtea-2.4.6pre01 tag.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(ICEDTEA_PATCHES): Remove PaX patches.
	(ICEDTEA_BOOT_PATCHES): Remove test_gamma
	patch (fixed by detection of non-Oracle JDK
	addition from PPC port)
	(ARM32JIT_STATUS): Set based on ENABLE_ARM32JIT.
	(ICEDTEA_ENV): Pass ARM32JIT and PAX_COMMAND to
	OpenJDK build.
	* NEWS: Updated with latest changes, including PaX
	ARM32 and Shark changes.
	* acinclude.m4:
	(IT_ENABLE_ARM32JIT): Allow the ARM32 JIT to be
	enabled.
	* configure.ac: Run IT_ENABLE_ARM32JIT macro.
	* hotspot.map: Update to icedtea-2.4.6pre01 tag.

2014-02-19  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR1677: Update PaX support to detect running PaX
	kernel and use newer tools
	* NEWS: Updated.
	* acinclude.m4:
	(IT_HAS_PAX): New macro to detect whether the running
	kernel uses PaX.
	(IT_WITH_PAX): Rewritten to search for PaX tools -
	currently paxmark.sh, paxctl-ng, chpax and paxctl -
	and fail if a tool isn't found and a PaX kernel is
	being used.

2014-01-28  Andrew John Hughes  <gnu.andrew@redhat.com>

	* configure.ac: Bump to 2.4.6pre01.
	* NEWS: Add 2.4.6 section.

2014-01-29  Andrew John Hughes  <gnu.andrew@redhat.com>
