@@ -484,8 +484,7 @@ ICEDTEA_ENV = \
 	JAVAC_WARNINGS_FATAL="$(WERROR_STATUS)" \
 	COMPILER_WARNINGS_FATAL="$(WERROR_STATUS)" \
 	UNLIMITED_CRYPTO="true" \
-	ARM32JIT="${ARM32JIT_STATUS}" \
-	PAX_COMMAND="${PAX_COMMAND}"
+	ARM32JIT="${ARM32JIT_STATUS}"
 
 if ENABLE_CACAO
 ICEDTEA_ENV += \
@@ -594,6 +593,11 @@ ICEDTEA_ENV += \
 	SYSTEM_KRB5="true" \
 	KRB5_LIBS="${KRB5_LIBS}" \
 	KRB5_CFLAGS="${KRB5_CFLAGS}"
+endif
+
+if WITH_PAX
+ICEDTEA_ENV += \
+	PAX_COMMAND="${PAX_COMMAND}"
 endif
 
 # OpenJDK boot build environment.
